# Job-moniter

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml  daily.yml
app/: __init__.py  main.py
app/ai/: __init__.py  catalog.py  job_service.py  metrics.py  registry.py  resume_service.py  search.py
app/analytics/: __init__.py  service.py
app/api/: deps.py  middleware.py  router.py
app/cache/: __init__.py  base.py  memory.py
app/collectors/: __init__.py  archive.py  base.py  capabilities.py  context.py  executor.py  loader.py  registry.py  retry_queue.py  state.py  versioning.py
app/config/: __init__.py  logging.py  settings.py
app/core/: __init__.py  classification.py  context.py  exceptions.py  quality.py  similarity.py  text.py
app/db/: __init__.py  bootstrap.py  indexes.py  mongo.py  vector_index.py
app/embeddings/: __init__.py  cache.py  cached.py  factory.py  hashing.py  provider.py  sentence_transformer.py
app/exporters/: __init__.py  base.py  csv_exporter.py  excel.py  html.py  json_exporter.py  pdf.py  registry.py  report_base.py  rows.py
app/http/: __init__.py  circuit_breaker.py  client.py  rate_limiter.py  retry.py
app/importers/: __init__.py  aliases.py  india_seed.py  markdown_seed.py  models.py  parsers.py  records.py  service.py  validation.py
app/metrics/: __init__.py  base.py  memory.py  names.py
app/models/: __init__.py  analytics.py  app_config.py  base.py  collector_benchmark.py  common.py  company.py  dead_letter.py  enums.py  import_record.py  job.py  pipeline_run.py  raw_payload.py  report_record.py  resume.py  retry_task.py  run.py  user.py  user_preferences.py
app/notifications/: __init__.py  base.py  channels.py  service.py  smtp.py
app/observability/: __init__.py  budgets.py
app/pipeline/: __init__.py  factory.py  pipeline.py  stages.py
app/registry/: __init__.py  loaders.py  models.py  reloader.py  service.py
app/reports/: __init__.py  context.py  dataset.py  scheduling.py  service.py  templating.py  themes.py  versioning.py
app/routing/: __init__.py  ats_updater.py  detector.py  models.py  router.py
app/scheduler/: __init__.py  daily_pipeline.py  run_daily.py
app/scheduling/: __init__.py  adaptive.py
app/scripts/: __init__.py  bootstrap_db.py  cli.py
app/services/: __init__.py  config_service.py
app/vector/: __init__.py  atlas_scorer.py  numpy_scorer.py  scorer.py
architecture/: AI_ARCHITECTURE.md  ATS_COLLECTORS.md  EMBEDDING_PIPELINE.md  EXTENSIBILITY.md  MODEL_REGISTRY.md  PIPELINE.md  REPORTING.md  VECTOR_SEARCH.md
architecture/adr/: ADR-001-vector-search.md  ADR-002-clean-hexagonal.md  ADR-003-ats-apis-over-scraping.md  ADR-004-github-actions-scheduler.md  ADR-005-mongodb-over-postgres.md
data/: ats_sources.yaml  company_aliases.yaml
data/companies/: .gitkeep  Indian_Company_Career_Sites.csv  companies.sample.csv  companies.sample.json  companies.sample.yaml  indian_companies.csv  indian_companies.json  indian_companies.md  indian_companies.yaml  indian_company_metadata.yaml
data/resume/: .gitkeep
data/taxonomies/: locations.yaml  roles.yaml  skills.yaml
docs/company_db/: 00_PRODUCTION_READINESS.md  01_DATABASE_OVERVIEW.md  02_URL_VALIDATION_REPORT.md  03_ATS_DETECTION_REPORT.md  04_ANALYTICS.md  05_DUPLICATE_REPORT.md  06_MISSING_COMPANY_REPORT.md  07_GITHUB_SOURCE_REPORT.md  08_TOP_100_FOR_PROFILE.md  README.md
tests/: conftest.py  http_fakes.py
tests/integration/: test_ai_api.py  test_ai_coverage.py  test_ai_services.py  test_analytics.py  test_ats_updater.py  test_benchmarks.py  test_bootstrap.py  test_cli.py  test_collector_executor.py  test_collector_state_api.py  test_company_import.py  (+11 more)
(+118 files in other folders)
