[project]
name = "ai-job-intelligence-agent"
version = "0.8.0"
description = "Autonomous AI-powered job discovery, ranking, and reporting platform."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AI Job Intelligence Agent" }]

# Core runtime dependencies. Kept lean so the API image and CI stay fast.
# Heavy ML dependencies live in the optional [ml] group below.
dependencies = [
    "fastapi>=0.115,<0.116",
    "python-multipart>=0.0.9,<0.1",
    "uvicorn[standard]>=0.34,<0.35",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "motor>=3.6,<4.0",
    "pymongo>=4.9,<5.0",
    "loguru>=0.7,<0.8",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.27,<0.28",
    "tenacity>=9.0,<10.0",
    "numpy>=2.1,<3.0",
    "openpyxl>=3.1,<4.0",
    "orjson>=3.10,<4.0",
    "jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
# ML stack. Large (torch + transformers). Installed in the pipeline/worker
# image and in CI jobs that actually compute embeddings — NOT in the lean API.
ml = [
    "sentence-transformers>=3.3,<4.0",
    # torch is pulled in transitively by sentence-transformers; pinned loosely so
    # CPU/GPU wheels resolve per platform. Optional GPU accel is auto-detected.
    "torch>=2.2",
]

# Report generation extras. reportlab (PDF) + markdown are lazy-imported by the
# PDF exporter / Markdown template renderer, so the lean API works without them.
reports = [
    "reportlab>=4.0,<6.0",
    "markdown>=3.5,<4.0",
]

# Developer tooling and test stack.
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7.0",
    "mongomock-motor>=0.0.34",
    "ruff>=0.8,<0.9",
    "mypy>=1.13,<2.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
# CLI entrypoint invoked by GitHub Actions for the daily run (implemented Phase 12).
job-agent-daily = "app.scheduler.run_daily:main"
# One-shot database provisioning (indexes, Atlas vector index, seed rows).
job-agent-bootstrap = "app.scripts.bootstrap_db:main"
# Phase 4 — source registry & company import framework CLIs.
job-agent-import = "app.scripts.cli:import_main"
job-agent-validate = "app.scripts.cli:validate_main"
job-agent-sync = "app.scripts.cli:sync_main"
job-agent-list-collectors = "app.scripts.cli:list_collectors_main"
# Phase 5 — Indian company career-site dataset builder.
job-agent-build-india = "app.scripts.cli:build_india_main"
# Phase 8 — offline embedding generation / model migration.
job-agent-embed = "app.scripts.cli:embed_main"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
# Ship the Jinja2 report templates inside the wheel.
"app.reports" = ["templates/*.j2"]

# ----------------------------------------------------------------------------
# Tooling configuration
# ----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic.

[tool.ruff.lint.per-file-ignores]
# Normalizers deliberately match typographic dashes (en/em) and use ×/↔ in
# comments/strings; these are intentional, not homoglyph mistakes.
"app/core/normalization/*.py" = ["RUF001", "RUF003"]
"app/core/ranking/engine.py" = ["RUF001"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["app"]
branch = true
